draft of about section completed

--- a/index.html
+++ b/index.html
@@ -73,12 +73,53 @@
           <h2 class="masthead-subheading mb-0" style="font-size: 70px; text-align: left">Alex Tai</h2>
           <h2 class="masthead-subheading mb-0" style="font-size: 70px; color:#8892B0;text-align: left">I develop cool things.</h2>
           <br></br>
-          <p style="text-align: left">I'm a hardware and software engineer based in Santa Clara, CA specializing in full-stack web and mobile development. Currently studying Computer Engineering at Santa Clara University. Ask me about it!</p>
-          <br></br>
-          <button type="button" class="btn btn-primary">Get In Touch</button>
+          <div class="row align-items-center">
+            <div class="col-lg-6">
+            <p style="text-align: justify;">I'm a hardware and software engineer based in Santa Clara, CA specializing in full-stack web and mobile development. Currently studying Computer Engineering at Santa Clara University. Ask me about it!</p>
+            <br></br>
+            <a href="mailto:alex@alex-tai.com"><button type="button" class="btn btn-primary">Get In Touch</button></a>
+          </div>
+          </div>
         </div>
       </div>
     </header>
+
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid" src="img/profile_square.jpg" style="border:3px solid #46A597;border-image-outset: 10;" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 style="color:#46A597">01. <em>About</em> ––––––––––––</h2>
+              <p id="accent_arrow" style="color:#8892B0;text-align: justify;">Hey there! I’m a hardware and software engineer who really enjoys working on projects. I enjoy using my engineering abilities to find solutions to solve existing problems.<br/><br/> I am currently pursuing my degree, Bachelor of Science in Computer Science and Engineering at <em>Santa Clara University</em>, and for the past 3+ years, I've been honing my skills in web development. I enjoy constantly learning and improving my skills with the technologies that keep evolving in this ever-changing field!<br/><br/>Here's a few things I'm experienced with:</p>
+              <div class="row">
+              <div class="col-lg-6 order-lg-1">
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> Python</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> C</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> Swift</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> Javascript</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> Git</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> HTML & CSS</p>
+
+              </div>
+              <div class="col-lg-6 order-lg-1">
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> Logic Design</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> PCB Layout Design</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> Firebase</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> SQL</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> GCP</p>
+                <p id="accent_arrow" style="color:#8892B0"><em>></em> AWS</p>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
