--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Stylesheets -->
-    <link href="css/stylesheet.css?v=0.1" rel="stylesheet">
+    <link href="css/stylesheet.css" rel="stylesheet">
 
   </head>
 
