added experience draft section
barebones

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"><p style="color:#46A597">01. <em>About</em></p></a>
+              <a class="nav-link" href="#about"><p style="color:#46A597">01. <em>About</em></p></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><p style="color:#46A597">02. <em>Experience</em></p></a>
+              <a class="nav-link" href="#experience"><p style="color:#46A597">02. <em>Experience</em></p></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><p style="color:#46A597">03. <em>Projects</em></p></a>
@@ -70,21 +70,21 @@
       <div class="masthead-content">
         <div class="container">
           <h1 class="masthead-heading mb-0" style="font-size: 22px; color:#46A597;text-align: left">👋🏻 Hi my name is</h1>
-          <h2 class="masthead-subheading mb-0" style="font-size: 70px; text-align: left">Alex Tai</h2>
-          <h2 class="masthead-subheading mb-0" style="font-size: 70px; color:#8892B0;text-align: left">I develop cool things.</h2>
+          <h2 class="masthead-subheading mb-0" style="font-size: 63px; text-align: left">Alex Tai</h2>
+          <h2 class="masthead-subheading mb-0" style="font-size: 63px; color:#8892B0;text-align: left">I develop cool things.</h2>
           <br></br>
           <div class="row align-items-center">
             <div class="col-lg-6">
             <p style="text-align: justify;">I'm a hardware and software engineer based in Santa Clara, CA specializing in full-stack web and mobile development. Currently studying Computer Engineering at Santa Clara University. Ask me about it!</p>
             <br></br>
-            <a href="mailto:alex@alex-tai.com"><button type="button" class="btn btn-primary">Get In Touch</button></a>
+            <a href="mailto:alex@alex-tai.com" target="_blank"><button type="button" class="btn btn-outline-primary">Get In Touch</button></a>
           </div>
           </div>
         </div>
       </div>
     </header>
 
-    <section>
+    <section id="about">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
@@ -121,10 +121,35 @@
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="py-5 bg-black">
+    <section id="experience">
       <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; Alex Tai 2018</p>
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <br/><br/><br/><br/><br/><br/><br/>
+              <p id="experience_exp">Marketing Assistant <em>@ SCU Presents</em><br/>Feb 2017 – Present<br/>> Created digital and print marketing materials for over 60 productions a year
+<br/>> Developed iOS Application for ticketing system and marketing analytics for over 9,000 members
+<br/>> Provided technical support for performing and speaking events weekly of audience sizes up to 250</p>
+
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 style="color:#46A597">02. <em>Experience</em> –––––––</h2>
+              <button id="experiences">SCU Presents</button><br/>
+              <button id="experiences">Deckstr</button><br/>
+              <button id="experiences">Taiwan Lacrosse Organization</button><br/>
+              <button id="experiences">National Taiwan University</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="py-5" style="background-color: #05101F">
+      <div class="container">
+        <p class="m-0 text-center small" style="color: #46A597; ">Copyright &copy; Alex Tai 2018</p>
       </div>
     </footer>
 
