updated and added more resume items

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
 
-    <!-- Navigation -->
+    <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-logo" href="#"><img src="img/logo.png" width="40"></a>
@@ -95,7 +95,9 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 style="color:#46A597">01. <em>About</em> ––––––––––––</h2>
-              <p id="accent_arrow" style="color:#8892B0;text-align: justify;">Hey there! I’m a hardware and software engineer who really enjoys working on projects. I enjoy using my engineering abilities to find solutions to solve existing problems.<br/><br/> I am currently pursuing my degree, Bachelor of Science in Computer Science and Engineering at <em>Santa Clara University</em>, and for the past 3+ years, I've been honing my skills in web development. I enjoy constantly learning and improving my skills with the technologies that keep evolving in this ever-changing field!<br/><br/>Here's a few things I'm experienced with:</p>
+              <p id="accent_arrow" style="color:#8892B0;text-align: justify;">Hey there! I’m a hardware and software engineer who really enjoys working on projects. I enjoy using my engineering abilities to find solutions to solve existing problems.
+                <br/><br/> I am currently pursuing my degree, Bachelor of Science in Computer Science and Engineering at <em>Santa Clara University</em>, and for the past 3+ years, I've been honing my skills in web development. I enjoy constantly learning and improving my skills with the technologies that keep evolving in this ever-changing field!
+                <br/><br/>Here's a few things I'm experienced with:</p>
               <div class="row">
               <div class="col-lg-6 order-lg-1">
                 <p id="accent_arrow" style="color:#8892B0"><em>></em> Python</p>
@@ -125,12 +127,21 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
-              <br/><br/><br/><br/><br/><br/><br/>
-              <p id="experience_exp">Marketing Assistant <em>@ SCU Presents</em><br/>Feb 2017 – Present<br/>> Created digital and print marketing materials for over 60 productions a year
-<br/>> Developed iOS Application for ticketing system and marketing analytics for over 9,000 members
-<br/>> Provided technical support for performing and speaking events weekly of audience sizes up to 250</p>
-
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            <div class="p-5" style="overflow:scroll; height:400px;">
+              <p id="experience_exp" style="color: white;">Marketing Assistant <em>@ SCU Presents</em><br/>Feb 2017 – Present
+                <br/><em>></em> Created digital and print marketing materials for over 60 productions a year
+                <br/><em>></em> Developed iOS Application for ticketing system and marketing analytics for over 9,000 members
+                <br/><em>></em> Provided technical support for performing and speaking events weekly of audience sizes up to 250
+                <br/><br/>Software Developer Intern<em> @ Deckstr</em><br/>July 2018 – Sep 2018
+                <br/><br/>Design Coordinator & Webmaster<em> @ Taiwan Lacrosse Organization</em><br/>Jan 2014 – May 2015
+                <br/><em>></em> Redesigned taiwanlax.org and boosted daily web traffic by 500% with Google Adwords
+                <br/><em>></em> Designed organization logo, t-shirts, and jerseys with Adobe Illustrator & InDesign
+                <br/><em>></em> Assisted TWLA to become 52nd country in Federation of International Lacrosse
+                <br/><br/>Circuit Board Design and Fabrication Intern<em> @ National Taiwan University</em><br/>Jun 2014 – Aug 2014
+                <br/><em>></em> Learned circuit board fabrication, under Shau-Gang Mao, Professor of Electrical Engineering
+                <br/><em>></em> Designed and fabricated two circuit boards from scratch up with EAGLE and Fritzing
+                <br/><br/></p>
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
