removed the scrolling height restriction
seems weird to have scroll bar temp

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
-            <br/><br/><br/><br/><br/><br/><br/><br/><br/>
-            <div class="p-5" style="overflow:scroll; height:400px;">
+            <div class="p-5">
               <p id="experience_exp" style="color: white;">Marketing Assistant <em>@ SCU Presents</em><br/>Feb 2017 – Present
                 <br/><em>></em> Created digital and print marketing materials for over 60 productions a year
                 <br/><em>></em> Developed iOS Application for ticketing system and marketing analytics for over 9,000 members
