added extra sections / favicon and mroe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <title>Alex Tai | Engineer & Developer</title>
 
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -36,10 +39,10 @@
               <a class="nav-link" href="#experience"><p style="color:#46A597">02. <em>Experience</em></p></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><p style="color:#46A597">03. <em>Projects</em></p></a>
+              <a class="nav-link" href="#projects"><p style="color:#46A597">03. <em>Projects</em></p></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><p style="color:#46A597">04. <em>Contact</em></p></a>
+              <a class="nav-link" href="#contact"><p style="color:#46A597">04. <em>Contact</em></p></a>
             </li>
             <li class="nav-item">
               <a href="https://drive.google.com/file/d/0BwchjIme_F1HbnFRRldGMFd3U1U/view" target="_blank"><button type="button" class="btn btn-outline-primary">Resume</button></a>
@@ -152,6 +155,53 @@
               <button id="experiences">National Taiwan University</button>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="container">
+        <!-- Project Item -->
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <p style="color: white;" id="experience_exp"><em>NutriFoods</em><br/>Food stickers that will make your messages more exciting</p>
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 style="color:#46A597">03. <em>Projects</em> –––––––––</h2>
+              <img src="img/proj_NutriFoods.png" style="width:100%"">
+            </div>
+          </div>
+        </div>
+
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <p style="color: white;" id="experience_exp"><em>WashTime</em><br/>WashTime allows the users to know if the laundry machines are in use and includes a timer feature.</p>
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <img src="img/proj_WashTime.png" style="width:100%"">
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
+    <section id="contact">
+      <div class="container">
+        <div class="py-5">
+            <div>
+              <h2 class="m-0 text-center" id="experience_exp" style="color:#46A597">04. <em>Contact</em></h2>
+              <br/>
+              <h4 class="m-0 text-center" id="experience_exp" style="color:white">Get In Touch</h2>
+              <p style="color:white; text-align: center;left: auto;">I’m actively for any freelance opportunities, my inbox is always open. Whether for a potential project or just to say hi, I'll try my best to answer your email!</br></br><a href="mailto:alex@alex-tai.com" target="_blank"><button type="button" class="btn btn-outline-primary">Say Hello!</button></a></p>
+            </div>
         </div>
       </div>
     </section>
